Changelog
=========

1.1.2 (unreleased)
------------------

- Fixed condition to show dexterity objects.
  Also check index for Missing.Value.
  [Julian Infanger]


1.1.1 (2013-06-05)
------------------

- Use javascript fallback for old browsers.
  [Julian Infanger]


1.1 (2013-05-30)
----------------

- Hide iphone scrollbar on loading a new page.
  [Julian Infanger]


1.0 (2013-04-30)
----------------

- Initial release