@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+        xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+  <object name="toggle_navigation" meta_type="CMF Action"
+          i18n:domain="ftw.mobilenavigation">
+    <property name="url_expr">string:${globals_view/navigationRootUrl}/load_children</property>
+  </object>
+
+</object>
